# rainbow

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-artifact.sh  build-content.ts  build-frontend.js  build-frontend.ts  build.py  build.sh  build.ts  bun.lockb  config-default.json  install.sh  package.json  requirements.txt  simple-style.css
.github/workflows/: build_and_deploy.yml  builld.yml
content/: about.md  test.md
content/articles/index/: about.md
content/articles/test/: test.md
content/articles/test2/: content.md  place_this_to_root.txt
content/articles/yahaha/: content.md
content/index/: index.md
frontend/: CMakeLists.txt  package-lock.json  package.json  rollup.config.js
frontend/scripts/: build-wasm.sh  build.sh
frontend/src-js/: common.js
frontend/src-wasm/markdown/: CMakeLists.txt
frontend/src-wasm/markdown/include/: markdown.h
frontend/src-wasm/pages/article/: CMakeLists.txt  article.cc  article.js
frontend/src-wasm/pages/index/: CMakeLists.txt  index.html  main.js
js/: post.js  pre.js
manifests-test/: a1.json  a2.json  index.json
rainbow-frontend/: article.html  index.html  package-lock.json  package.json  vite.config.js
rainbow-frontend/src/: Article.vue  Index.vue  article.js  index.js  style.css
rainbow-frontend/src/common/: decryptString.js  formatTime.js  parseQuery.js
rainbow-frontend/src/components/: BackgroundGameOfLife.vue  BackgroundRandomRectangles.vue  FaceCursor.vue  Markdown.vue
scripts/: build-core.sh  build.py  build.sh  common.py  install.sh  new.py  rebuild.sh  server.py  server.sh  update.py
src/: articles.tsx  base64_browser.ts  common.ts  crypto.ts  index.jsx  index.tsx  main.cc  path.ts
src/components/: article.tsx  article_list.tsx  fade_in_out.tsx  rainbow.tsx
src/markdown/src/: markdown.cc
src/pages/: article.tsx  articles.tsx  index.tsx  numbers_in_text.tsx  timestamp.tsx  tools.tsx
src/pages/article/: CMakeLists.txt  article.cc  article.html  article.js
src/pages/index/: CMakeLists.txt  fragment_shader.inc  index.html  main.cc  main.js  vertex_shader.inc
stylesheets/: style.css
templates/: article.html  index.html  page.html  rss.xml
test/: index.json  markdown.html
tools/: build.py  bundle.py  common.py
tools/src/: CMakeLists.txt  build.sh
tools/src/markdown/: CMakeLists.txt  README.md  markdown.cpp
